Cleanup CSS (remove scaffold.css, fix alignment).

--- a/app/assets/stylesheets/session.css.scss
+++ b/app/assets/stylesheets/session.css.scss
@@ -92,7 +92,7 @@
     font-size: 12px;
     text-transform: uppercase;
     border: solid 1px #ccc;
-    padding: 8px 14px 8px 14px;
+    padding: 8px 10px 8px 10px;
     letter-spacing: 1px;
     outline: none;
 
